--- a/templates/accounts/preparation.html
+++ b/templates/accounts/preparation.html
@@ -156,7 +156,7 @@
         {% endif %}
 
         <div class="w-100 flex-this flex-end">
-            <div class="margin-right-8">
+            <div class="mr-8">
                 <a class="primary-btn white-btn" href="{% url 'dashboard' %}">Complete step later</a>
             </div>
             <div>
