--- a/templates/admin/partials/_data-visuals.html
+++ b/templates/admin/partials/_data-visuals.html
@@ -14,15 +14,15 @@
             <div class="flex-this justify-center wrap">
                 <div class="flex-this">
                     <div class="tooltip" style="cursor: default;background-color: #108670;"></div>
-                    <p class="mt-0 ml-8 margin-right-8">Community</p>
+                    <p class="mt-0 ml-8 mr-8">Community</p>
                 </div>
                 <div class="flex-this">
                     <div class="tooltip" style="cursor: default;background-color: #EF6C00;"></div>
-                    <p class="mt-0 ml-8 margin-right-8">Institution</p>
+                    <p class="mt-0 ml-8 mr-8">Institution</p>
                 </div>
                 <div class="flex-this">
                     <div class="tooltip" style="cursor: default;background-color: #007385;"></div>
-                    <p class="mt-0 ml-8 margin-right-8">Researcher</p>
+                    <p class="mt-0 ml-8 mr-8">Researcher</p>
                 </div>
             </div>
         </div>
@@ -43,19 +43,19 @@
         <div class="flex-this justify-center wrap">
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #EF6C00;"></div>
-                <p class="mt-0 ml-8 margin-right-8">Engagement Notice</p>
+                <p class="mt-0 ml-8 mr-8">Engagement Notice</p>
             </div>
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #007385;"></div>
-                <p class="mt-0 ml-8 margin-right-8">Disclosure Notice</p>
+                <p class="mt-0 ml-8 mr-8">Disclosure Notice</p>
             </div>
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #108670;"></div>
-                <p class="mt-0 ml-8 margin-right-8">Labels Applied</p>
+                <p class="mt-0 ml-8 mr-8">Labels Applied</p>
             </div>
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #64748B;"></div>
-                <p class="mt-0 ml-8 margin-right-8">No Activity</p>
+                <p class="mt-0 ml-8 mr-8">No Activity</p>
             </div>
         </div>
     </div>
@@ -70,11 +70,11 @@
         <div class="flex-this justify-center wrap">
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #EF6C00;"></div>
-                <p class="mt-0 ml-8 margin-right-8">TK Labels</p>
+                <p class="mt-0 ml-8 mr-8">TK Labels</p>
             </div>
             <div class="flex-this">
                 <div class="tooltip" style="cursor: default;background-color: #007385;"></div>
-                <p class="mt-0 ml-8 margin-right-8">BC Labels</p>
+                <p class="mt-0 ml-8 mr-8">BC Labels</p>
             </div>
         </div>
     </div>
@@ -85,7 +85,7 @@
 <div class="flex-this w-100 justify-center">
     <div class="w-100 dash-card">
         <h1 class="center-text">Registered Users</h1>
-        <div id="colorPicker" class="flex-this space-between center-text justify-center ml-8 margin-right-8">
+        <div id="colorPicker" class="flex-this space-between center-text justify-center ml-8 mr-8">
             <div class="stats-count-div">
                 <div class="flex-this justify-center">
                     <h2 class="count-header">New Users</h2>
