--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -178,7 +178,7 @@
                     <i class="fa fa-spinner fa-spin fa-2x spinner"></i>
                 </a>
             </div>
-            <div class="margin-right-8" id="skip-this-step">
+            <div class="mr-8" id="skip-this-step">
                 <a class="primary-btn white-btn" href="{% url 'confirm-community' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
