--- a/templates/communities/customize-label.html
+++ b/templates/communities/customize-label.html
@@ -267,7 +267,7 @@
                 <label>Label Audio File</label>
 
                 <div class="flex-this">
-                    <div class="margin-right-8">
+                    <div class="mr-8">
                         <div class="hide">{{ form.audiofile }}</div>
                         <button id="customLabelAudioFileUploadBtn" class="primary-btn green-btn">Upload audio file <i class="fa-solid fa-upload"></i></button>
                     </div>   
