--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -214,7 +214,7 @@
         <div>
             <a
                 id="community-boundary-continue-btn"
-                class="primary-btn action-btn disabled-btn margin-right-8"
+                class="primary-btn action-btn disabled-btn mr-8"
                 onclick="setBoundary(this)"
             >
                 Update Boundary
