--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -85,7 +85,7 @@
         </p>
 
         <div class="flex-this space-between margin-bottom-16">
-            <div class="margin-right-8 w-100">
+            <div class="mr-8 w-100">
                 <label for="contact_name">
                     Contact name
                 </label>
