--- a/templates/institutions/create-institution.html
+++ b/templates/institutions/create-institution.html
@@ -81,7 +81,7 @@
         </p>
 
         <div class="flex-this space-between margin-bottom-16">
-            <div class="margin-right-8 w-100">
+            <div class="mr-8 w-100">
                 <label for="contact_name">
                     Contact name
                 </label>
@@ -107,7 +107,7 @@
             
             {{ form.ror_id }}
             <div class="flex-this creat-account__container-width__buttons">
-                <div class="margin-right-8">
+                <div class="mr-8">
                     <button id="clearFormBtn" class="primary-btn white-btn btn-width__clear-form mt-2p">Clear form <i class="fa-regular fa-eraser"></i></button>
                 </div>
                 <div>
