--- a/templates/partials/_update-account-main-area.html
+++ b/templates/partials/_update-account-main-area.html
@@ -56,7 +56,7 @@
 
             <div class="flex-this">
                 <div>
-                    <button id="altImageUploadBtn" class="primary-btn action-btn margin-right-8">Upload image <i class="fa-solid fa-upload"></i></button>
+                    <button id="altImageUploadBtn" class="primary-btn action-btn mr-8">Upload image <i class="fa-solid fa-upload"></i></button>
                 </div>
                 <div>
                     <button id="clearImageBtn" class="primary-btn white-btn" name="clear_image">Clear image</button>
