--- a/templates/projects/create-project.html
+++ b/templates/projects/create-project.html
@@ -122,7 +122,7 @@
                 </span>
             </div>
             <div class="w-50 flex-this">
-                <div class="w-50 margin-bottom-16 margin-right-8">
+                <div class="w-50 margin-bottom-16 mr-8">
                     {{ form.project_type }}<br>
                     {% if form.project_type.errors %}
                         <div class="msg-red w-50"><small>{{ form.project_type.errors.as_text }}</small></div>
@@ -176,7 +176,7 @@
                 <br>
 
                 <div class="flex-this mt-8 margin-bottom-16">
-                    <textarea id="projectLinksInput" class="w-100 block margin-right-8" rows="1"></textarea>
+                    <textarea id="projectLinksInput" class="w-100 block mr-8" rows="1"></textarea>
                     <div id="addProjectUrlBtn" class="add-square-btn pointer">
                         <span>+</span>
                     </div>
