--- a/templates/projects/project-comment.html
+++ b/templates/projects/project-comment.html
@@ -12,7 +12,7 @@
                     </span>
                 </div> 
             </h2>
-            <h2 class="margin-right-8 pointer" onclick="toggleProjectInfo(this, 'projectMessageDiv')"><i class="fa-solid fa-plus fa-xl darkteal-text"></i></h2>
+            <h2 class="mr-8 pointer" onclick="toggleProjectInfo(this, 'projectMessageDiv')"><i class="fa-solid fa-plus fa-xl darkteal-text"></i></h2>
         </div>
         <div id="projectMessageDiv" style="height: 0px; overflow: hidden;">
             <div>
