--- a/templates/settings-base.html
+++ b/templates/settings-base.html
@@ -65,7 +65,7 @@
       <!-- {#
                 <a class="side-nav-a" href="{% url 'api-key' %}">
                     <div class="side-nav-item {% if 'apikey' in request.path %} selected {% else %} grey-text {% endif %}">
-                        <div class="w-20 margin-right-8"><i class="fa fa-code fa-3x" aria-hidden="true"></i></div>
+                        <div class="w-20 mr-8"><i class="fa fa-code fa-3x" aria-hidden="true"></i></div>
                         <div class="w-80">
                             <p class="mt-0"><strong>API Key</strong><br>Manage API Key</p>
                         </div>
@@ -77,7 +77,7 @@
         <div
           class="side-nav-item {% if 'deactivate' in request.path %} selected {% else %} grey-text {% endif %}"
         >
-          <div class="w-20 margin-right-8">
+          <div class="w-20 mr-8">
             <i class="fa fa-power-off fa-3x" aria-hidden="true"></i>
           </div>
           <div class="w-80">
