--- a/templates/snippets/notifications.html
+++ b/templates/snippets/notifications.html
@@ -9,7 +9,7 @@
 {% return_notifications researcher as researcher_notifications %}
 
 
-<div class="dropdown margin-right-8" >
+<div class="dropdown mr-8" >
 
     {% if 'dashboard' in request.path  and scope != user %}
         <div class="m-0">
