--- a/templates/boundary/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/boundary/update-boundary-via-native-land-and-shapefile.html
@@ -214,7 +214,7 @@
         <div class="{% if create_mode %}invisible{% endif %}">
             <a
                 id="community-boundary-continue-btn"
-                class="primary-btn action-btn disabled-btn margin-right-8"
+                class="primary-btn action-btn disabled-btn mr-8"
                 onclick="setBoundary(this)"
             >
                 Update Boundary
