--- a/templates/communities/community-boundary.html
+++ b/templates/communities/community-boundary.html
@@ -99,7 +99,7 @@
                     Continue <i class="fa fa-arrow-right"></i>
                 </a>
             </div>
-            <div class="margin-right-8" id="skip-this-step">
+            <div class="mr-8" id="skip-this-step">
                 <a class="primary-btn white-btn" href="{% url 'confirm-community' %}">Skip this step <i class="fa fa-arrow-right"></i></a>
             </div>
         </div>
