--- a/templates/communities/connections.html
+++ b/templates/communities/connections.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="dashcard-btn-container">
-                    <div class="margin-right-8">
+                    <div class="mr-8">
                         <a class="primary-btn action-btn" href="{% url 'public-institution' institution.id %}">View public page</a>
                     </div>
                     <div>
@@ -89,7 +89,7 @@
                     <div><p class="dashcard-description description-sm">{% if researcher.description %}{{ researcher.description }} {% else %} No description provided. {% endif %}</p></div>
                 </div>
                 <div class="dashcard-btn-container">
-                    <div class="margin-right-8">
+                    <div class="mr-8">
                         <a class="primary-btn action-btn" href="{% url 'public-researcher' researcher.id %}">View public page</a>
                     </div>
                     <div>
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class="dashcard-btn-container">
-                    <div class="margin-right-8">
+                    <div class="mr-8">
                         <a class="primary-btn action-btn" href="{% url 'public-community' comm.id %}">View public page</a>
                     </div>
                     <div>
