--- a/templates/communities/edit-label.html
+++ b/templates/communities/edit-label.html
@@ -39,7 +39,7 @@
                     <div class="flex-this">
                         {% if bclabel.audiofile %} <div class="margin-right-16"><audio src="{{ bclabel.audiofile.url }}" controls></audio></div>{% endif %}
                         {% if tklabel.audiofile %} <div class="margin-right-16"><audio src="{{ tklabel.audiofile.url }}" controls></audio></div>{% endif %}
-                        <div class="margin-right-8">
+                        <div class="mr-8">
                             <div class="hide">{{ form.audiofile }}</div>
                             <button id="customLabelAudioFileUploadBtn" class="primary-btn green-btn">
                                 {% if bclabel.audiofile or tklabel.audiofile %}
