--- a/templates/institutions/connections.html
+++ b/templates/institutions/connections.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="dashcard-btn-container">
-                <div class="margin-right-8">
+                <div class="mr-8">
                     <a class="primary-btn action-btn" href="{% url 'public-institution' inst.id %}">View public page</a>
                 </div>
                 <div>
@@ -86,7 +86,7 @@
                 <div><p class="dashcard-description description-sm">{% if researcher.description %}{{ researcher.description }} {% else %} No description provided. {% endif %}</p></div>
             </div>
             <div class="dashcard-btn-container">
-                <div class="margin-right-8">
+                <div class="mr-8">
                     <a class="primary-btn action-btn" href="{% url 'public-researcher' researcher.id %}">View public page</a>
                 </div>
                 <div>
@@ -146,7 +146,7 @@
             </div>
 
             <div class="dashcard-btn-container">
-                <div class="margin-right-8">
+                <div class="mr-8">
                     <a class="primary-btn action-btn" href="{% url 'public-community' community.id %}">View public page</a>
                 </div>
                 <div>
