--- a/templates/researchers/connections.html
+++ b/templates/researchers/connections.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="dashcard-btn-container">
-                    <div class="margin-right-8">
+                    <div class="mr-8">
                         <a class="primary-btn action-btn" href="{% url 'public-institution' institution.id %}">View public page</a>
                     </div>
                     <div>
@@ -95,7 +95,7 @@
                     <div><p class="dashcard-description description-sm">{% if res.description %}{{ res.description }} {% else %} No description provided. {% endif %}</p></div>
                 </div>
                 <div class="dashcard-btn-container">
-                    <div class="margin-right-8">
+                    <div class="mr-8">
                         <a class="primary-btn action-btn" href="{% url 'public-researcher' res.id %}">View public page</a>
                     </div>
                     <div>
@@ -155,7 +155,7 @@
                 </div>
 
                 <div class="dashcard-btn-container">
-                    <div class="margin-right-8">
+                    <div class="mr-8">
                         <a class="primary-btn action-btn" href="{% url 'public-community' community.id %}">View public page</a>
                     </div>
                     <div>
